--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,23 @@ description 'Kotlin Artificial Neural Network'
 
 buildscript {
     ext.kotlin_version = '1.1.3'
+    ext.jvm_version = '1.8'
+    ext.junit_platform_version = '1.0.0-M4'
 
     repositories {
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.junit.platform:junit-platform-gradle-plugin:$junit_platform_version"
     }
 }
 
+apply plugin: 'maven'
 apply plugin: 'kotlin'
+apply plugin: "org.junit.platform.gradle.plugin"
+apply plugin: 'idea'
 
 repositories {
     mavenCentral()
@@ -24,6 +31,12 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-jdk8', version: '0.14'
     compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '0.14'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0-M4'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0-M4'
+}
+
+junitPlatform {
+    platformVersion = junit_platform_version
 }
 
 compileKotlin {
@@ -31,4 +44,39 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
+}
+
+// Important: All classes containing test cases must match the
+// the regex pattern "^.*Tests?$" to be picked up by the junit-gradle plugin.
+sourceSets {
+    main.kotlin.srcDirs += 'src/main/kotlin'
+    test.kotlin.srcDirs += 'src/test/kotlin'
+    main.java.srcDirs += 'src/main/java'
+    test.java.srcDirs += 'src/test/java'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+task wrapper(type: Wrapper) {
+    description = 'Generates gradlew[.bat] scripts for faster execution'
+    gradleVersion = '4.0'
 }
